--- a/index.html
+++ b/index.html
@@ -1,1 +1,169 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>走近石黑一雄</title>
+    <style type="text/css">
+     *{
+         background-color: mistyrose;
+     }
+     #id1{
+         text-align: center;
+         font-family: Microsoft YaHei;
+         font-size: 20px;
+         text-shadow: 1px 1px 2px gray;
+     
+     }
+     #id2{
+         text-indent: 30px;
+         font-family: SimSun;
+         color: brown;
+         border:1px solid #5F5FDD;
+         margin: 100px 1000px 100px 50px;
+         padding: 10px 10px 10px 20px;
+     }
+     #id3{
+         font-family: KaiTi;
+         font-size:22px;
+         color: #FF5B5B;
+         text-shadow: 1px 1px 1px pink;
+         margin: -777px 5px 0px 470px;
+         text-align: center;
+     } 
+    .c1{
+         float: left;
+         clear: both;
+     }  
+     #id4{
+         text-align: center;
+         content: 100px;
+         margin: 0 100px 0 100px;
+     }
+     #id5{
+         text-indent: 30px;
+         margin: 0 200px 0 200px;
+     }
+     #id6{
+         margin:100px 15px 0 15px;
+         float: left;
+     }
+     #id7{
+         font-family: youyuan;
+         margin: 100px 0 50px 80px;
+         padding: 0 700px 0 0;
+     }
+     #id8{
+         margin: -450px 0 0 600px;
+     }
+     #id9{
+         margin: 40px 0 -50px 1050px;
+         font-family: Georgia;
+         font-size: 20px;
+         color: green;
+     }
+    </style>
+</head>
+<body>
+    <div id="id1">
+        <h1 style="color:#383838">石黑一雄——2017年诺贝尔文学奖得主</h1>
+        <hr style="height:10px;border:none;border-top:10px groove pink;" />
+        <audio src="1/ヘクとパスカル - fish in the pool ・花屋敷.mp3" controls></audio>
+        <p>北京时间2017年10月5日19时（瑞典当地时间13时），<br>诺贝尔文学奖正式公布，今年的获奖者是日裔英国作家石黑一雄。<br>瑞典学院将其创作母题归纳为“记忆、时间和自我欺骗”，<br>并称：“石黑一雄的小说以巨大的情感力量，揭露了我们与世界联系的虚幻之下的深渊。”</p>
+        <img src="1/shyx4.jpeg" alt="石黑一雄肖像画" width="400px" height="266px">
+        <img src="1/shyx2.jpg" alt="石黑一雄">   
+    </div><hr>
+    <div id="id2" class="c1">
+        <h2 style="color:black">人物简介</h2>
+        <p>石黑一雄（Kazuo Ishiguro，1954——），日裔英国小说家。</p>
+        <p>1954年11月8日，石黑一雄生于日本长崎，1960年随家人移居英国，先后毕业于肯特大学和东安格利亚大学，并于1982年获得英国国籍。1983年开始发表小说，其主要作品有《群山淡景》、《浮世画家》和《长日将尽》等。曾获得1989年布克奖、2017年诺贝尔文学奖、大英帝国勋章、法国艺术及文学骑士勋章等多个奖项，与鲁西迪、奈保尔被称为“英国文坛移民三雄”。</p>
+        <a href="https://baike.baidu.com/item/%E7%9F%B3%E9%BB%91%E4%B8%80%E9%9B%84/5534214?fr=aladdin" target="open">
+            <img src="1/shyx1.jpg" alt="石黑一雄" width="350px" height="300px" id="id1"></a>↑点击转跳百度百科
+    </div>
+        <hr style="height:1px;border:none;border-top:2px dashed #0066CC;" />
+    <div id="id3" class="c1">
+        <img src="1/h1.jpg" alt="他真是个天才" width="88px">
+        <p> 石黑一雄是具独创性的天才。（《纽约时报》评）<br>
+            石黑一雄是整个世代中杰出且有原创性的作家。（剧作家苏珊‧希尔评）<br>
+            石黑一雄是一位大艺匠家。（加拿大诗人、小说家玛格丽特·爱特伍评）<br>
+            石黑一雄是“动人的咏叹过去的诗人”。（美国作家乔伊斯·卡罗尔·欧茨评）<br></p>
+            <img src="1/shyx3.jpeg" alt="石黑一雄作品图"> 
+            <hr style="height:1px;border:none;border-top:3px dashed #0066CC;" />
+    </div>
+    <div id="id4">
+        <h2 style="color:#0D0D68">意料之中？意料之外？</h2>
+        <img src="1/jt1.png" alt="BBC页面截图" width="700px"><br>
+        <img src="1/bq2.gif" alt="被吓到的惊喜">
+        <a href="http://www.bbc.com/news/av/entertainment-arts-41517879/kazuo-ishiguro-i-thought-nobel-prize-was-a-mistake" target="open">在接受BBC的采访时，石黑一雄首度表态称，获得该奖“是个被吓到的惊喜”。</a>
+        <p><b>他表示，诺奖委员会目前还没有联系他，还不知道获奖消息是否真实。<br>若真的获奖，“那将是荣幸，这意味着我走在之前伟大的作家身后，对我来说是巨大的肯定。”</b></p>
+    </div><br><br>
+    <div id="id5">   
+        <p style="align:left">在石黑一雄获奖当晚，界面文化（ID：Booksandfun）采访了社科院外国文学研究所前所长陆建德和作家格非，两位译者——浙江大学外国文学研究所副所长郭国良和上海对外经贸大学副教授周小进，以及上海译文出版社石黑一雄作品责任编辑冯涛，听他们说说对于今年诺奖评选与获奖者石黑一雄的评价与感想。</p>
+        <p><b>格非（作家、清华大学文学院教授）：</b>
+        <u>石黑一雄的文学成就非常突出</u><br>
+        石黑一雄获奖是理所当然的。他的作品的中译本我基本上都看过，我觉得他是当代非常重要的一位作家。《长日留痕》在文体上达到了非常高的艺术成就，他的短篇小说和后来的《别让我走》也特别好，尤其是后者，关注到克隆人的问题，写得亦真亦幻。石黑一雄是一位非常重要的文体家。他出生于日本长崎，后来去了英国，两个不同的文化视角导致他的叙事有非常多的兼容性。另外，石黑一雄也是个音乐方面的大师，对于比较严肃的流行音乐非常精通。我关注石黑一雄很多年了，他的文学成就在当今是非常突出的，他得奖我觉得理所当然。</p>
+        <p><b>陆建德（中国社会科学院文学研究所原所长、研究员） ：</b> <u>石黑一雄和英国文学的传统非常紧密</u></p>
+        <p>这个结果完全出乎意料。日本作家里大家谈得比较多的是村上春树，而英国籍的作者最近得奖好像偏多了一些。早在90年代，石黑一雄在国内就有介绍，但最近几年谈得不是很多。石黑一雄的作品没有《挪威的森林》名气这么大，但在描写人和人之间复杂的感情方面他做得特别好，绝对是一流的作家。</p>
+        <p>在石黑一雄还是孩子的时候，他就开始接受英国教育，和英国文学传统关系紧密。比如说，他叙述比较克制，不是汪洋恣肆的，很温和但是背后味道很足。他又是亚裔，非常细腻而敏感，而且对日本文化非常关注，处理过日本的题材，处理过20世纪上半叶日本人与中国人的关系（《上海孤儿》），这些题材是很难把握的。我想他做调查时应该来过几次中国。</p>
+        <p>他作品不算多，但够得上一流作家。他的作品我没有都看过，但是《长日留痕》这本书绝对是杰作。他处理历史题材特别细腻，从管家的视角去看英国上层社会的生活，却没有脸谱化地简单呈现。里面又牵扯到管家之间的感情，让人看得非常动心。小说用回忆的口吻来写，老人对自己和事物的认识有欠缺，但他能够回忆中在重新认识自己，而过程中留下了很多空白，引发读者思考。这本书整体来说是大师的笔法。</p>
+        <p>最新的《被掩埋的巨人》讲的是古代英国部落之间的故事，也有特殊的现实含义，也即我们应该如何处理历史上的仇恨。石黑一雄的观点和我们熟悉的有仇必报不一样，他认为忘记比较好，否则会引发新一轮的仇恨。这样看，他讨论话题还是角度很新颖。</p>
+        <p><b>郭国良（浙江大学外国文学研究所副所长，《无可慰藉》译者）：</b>
+        <u>移民作家很多，石黑一雄有其高明之处</u></p>
+        <p>得知石黑一雄得奖，我的第一个感受是惊喜，虽然听说他在赔率排行榜里进入了前五六十名，但没想到会获诺奖。我这几年来关注、翻译、研究的是布克奖作品，所以石黑一雄自然也进入了我的视野。我只翻译了他的一部作品——《无可慰藉》，这也是他最长的作品，我认为他已经进入了一流作家的行列，获奖当之无愧。</p>
+        <p>他最有名的作品是1989年获布克奖的《长日留痕》，这部作品几乎成为了他的同义词。但他早期受东方文化影响多一些，写日本音乐家和艺术家，《无可慰藉》在某种程度上可以说是他的转折点，他此后不由自主地向整个人类的宏大命题迈进。</p>
+        <p>《无可慰藉》肯定受到了卡夫卡的影响，里面有很多超现实的东西，分不清现实和梦幻。这在某种角度上也是人的真实的生存状态，搞不清到底我是谁，他人是谁。主人公本来要去开音乐会，可是有各种各样的原因让他开不了音乐会。这也预示着当代人的一种荒谬处境：拥有目标，追求目标，但各种事情来牵绊你，让你分心，最终让你一事无成。</p>
+        <p>石黑一雄也是英国移民文学三雄之一。原本很强大的英帝国如何走向衰落；英国性是如何构建的；后现代之后，英国性又是如何失落和保存的；新的形势下又进行了怎样的重建……这些是石黑一雄和他的同辈英国作家都感兴趣的话题。石黑一雄很多作品都在探讨这些问题，但他立足英国又超越了英国，也探讨了人类命运等宏大的话题。而且，他不但走回历史去，同时也关注当下，比如遗传的伦理问题等等。</p>
+        <p>作家都是很敏感的，作为日裔英国作家，他对于不同文化的融合和撞击会更加敏感，我想，无论是在成长过程中还是现在，石黑一雄都在审视自己的身份——国籍的身份、文化的身份、个人的身份，肯定都在他的关注范围之内，这是日本作家所体会不到的。</p>
+        <p>当代英国文学中的很多作家都具有移民身份，非常丰富多彩。现代社会移民很多，连根拔起到一个新的文化背景里，面临着个人如何适应和生存的问题，心情肯定非常复杂。虽然石黑一雄没有展现像脱欧这些具体问题，但是他的作品实际上已经有了多民族多种族融合产生各种矛盾的端倪。可能还没有作家细致地描写过从一种文化走向另一种文化的经历，写个体、组织、国家如何面对全球化的复杂局面，而石黑一雄的高明之处可能就在这里。</p>
+        <p>朱利安·巴恩斯、伊恩·麦克尤恩、格雷厄姆·斯威夫特、萨尔曼·拉什迪等作家和石黑一雄是同辈，也几乎是同一个水准。所以我既高兴，也有点儿悲哀，这些作家可能要过上几年才能再获奖了。</p>
+        <p><b>周小进（上海对外经贸大学副教授、《被掩埋的巨人》译者）：</b>
+        <u>石黑一雄在中国是热门作家</u></p>
+        <p>对我来说，石黑一雄得奖既在意料之外也在意料之中。意料之中是因为他一直有新的东西出来，在成名之后一直有新的突破，在尝试不同的新的写法，这一点在成名作家里比较罕见。不过因为真正写得好的人非常多，村上春树等等都是很厉害的，因此石黑一雄得奖也是意料之外吧。</p>
+        <p>我个人挺喜欢《被掩埋的巨人》。在一定程度上，很多人都想凸显石黑一雄的日本特性，当然他有一定的东方特性，但这只是他的很多方面之一，我不认为从根源上可以说他是个日本移民作家。在这本书中，他的语言非常简单，叙事线条也很简单，但整本书很有韵味，越想越深。中文里这叫“言近意远”，就是在文字上不是那么花哨斑斓，但韵味感和意境感非常值得思考，有点儿娓娓道来的感觉。亚洲人可能比较欣赏这种风格，可以说是禅宗的味道，也可以说是留白，或者海明威式的风格。他在语言上的特点就是这样，不用很多修饰语、修辞方法或是语言上的技巧，语言简单，意境无穷。</p>
+        <p>从写作主题上来说，人们也常常有一种误解，即认为他不太关注现实。但实际上，他是关注现实较多的作家，关心某个局部性的冲突、民族间的问题或者战争创伤等。但在作品中，他不直接写这些问题，而是拉得比较远，在时间上和空间上拉远一些，这在有些时候就引起了一些误解。</p>
+        <p>更进一步，我认为石黑一雄不仅仅是写移民的身份，写种族，探讨国家和国家之间如何相处，探讨一个人怎样在不同种族的社区中存在，又或者是文化创伤和文化记忆，他写的其实是人性，他关注的是哲学层面上人的存在和人与人的关系，是对于人的存在产生的一些终极意义上的思考。因此，他的作品有哲学的高度和历史的深度，他处理的不是局部性的事情，而是从安身立命和人存在的价值、意义、反思这个角度来切入。</p>
+        <p>石黑一雄在中国的译介其实是非常充分的。国内的出版社还是很有眼光的，他的大部分作品都被翻译成中文了，很多作品翻译和出版的速度很快。石黑一雄在中国是热门，绝对不是冷门，普通读者对他了解也很多，学术界对他的重视程度也非常高，介绍和讨论他的文章也一直非常多。</p>
+        <p>我在自己教授的文学课上，有推荐同学们阅读石黑一雄的作品，但主要是课下阅读。我们的文学史读本里当代作家比重不高，因为涉及版权问题，将他们的作品纳入教材较为困难。</p>
+        <p><b>冯涛（上海译文出版社石黑一雄作品责任编辑）：</b>
+        <u>获诺奖之前，石黑一雄的书卖得不好不坏</u></p>
+        <p>石黑一雄所有作品的版权都在上海译文出版社。他的作品不是很多，到现在为止一共有七部长篇和一部短篇。我们已经出了五种，过去旁落的《长日将尽》（旧译《长日留痕》）、《莫失莫忘》（旧译《别让我走》）、《我辈孤雏》（旧译《上海孤儿》）也都已经买下来，考虑到原译本质量不是很好，《长日将尽》和《莫失莫忘》计划在明年推出新译本。</p>
+        <p>石黑一雄的版权之前被译林出版社买走，上海译文出版社从《小夜曲 : 音乐与黄昏五故事集》开始介入版权，五六年来陆续把所有作品都买来了。我之所以想做他的书，是因为喜欢石黑一雄的美学风格，日本文化中那种“静水深流”的审美在他身上有很明显的体现。当时布克奖作品《长日将尽》拍成了电影，很多英国人就惊呼日裔作家写出了英国作家都写不出的感受。但我认为，日本传统文化中一直有退让、隐忍这些民族性，而他把这种元素和英国保守传统的文化结合在了一起。</p>
+        <p>从以往销售情况来看，石黑一雄的书卖得不好不坏，基本上好的能卖一万册，一般的卖七八千册左右，都没有重印过。如果没有获得诺奖，可能也就这样了。</p>
+        <p>石黑一雄有社交恐惧症，他都是默默地写，创作期很长。在前一部最新长篇《被掩埋的巨人》出版之前，他已经有十年没有写长篇了，可见他有自己的坚守。而且他写什么都不会告诉外人，我们也不知道他现在在写什么。有好几年我们想请他到中国来参加上海书展，但他都是能躲就躲。</p>
+        <p><a href="http://www.jiemian.com/" target="open">新闻来源：界面文化</a></p>
+    </div> 
+        <hr style="height:3px;border:none;border-top:3px double #819AEC;" />
+        <hr style="height:3px;border:none;border-top:3px double #819AEC;" />
+    <div id="id7">
+        <h1 align="center" style="color:#FF5B5B">相关资讯</h1>
+        <img src="1/bq1.jpg" alt="胡萝北图标">
+        <a href="http://news.163.com/17/1007/13/D0582O440001875O.html" target="open">诺奖得主石黑一雄:我的一部分感觉像一个冒名顶替者</a><br>
+        <img src="1/bq1.jpg" alt="胡萝北图标">
+        <a href="http://news.163.com/17/1006/14/D02OMMSP000187VE.html" target="open">专访｜学者谈石黑一雄：书写历史创伤的大师</a><br>
+        <img src="1/bq1.jpg" alt="胡萝北图标">
+        <a href="http://news.ifeng.com/a/20171007/52411824_0.shtml" target="open">来，看看新晋诺贝尔文学奖石黑一雄的经典作品</a><br>
+        <img src="1/bq1.jpg" alt="胡萝北图标">
+        <a href="http://money.163.com/17/1006/12/D02HQGKV002580S6.html" target="open">石黑一雄的文学：于浮世中找寻安宁</a><br>
+        <img src="1/bq1.jpg" alt="胡萝北图标">
+        <a href="http://www.sohu.com/a/196420012_730259" target="open">诺贝尔文学奖新晋得主石黑一雄 | 他与村上春树惺惺相惜</a><br>
+        <img src="1/bq1.jpg" alt="胡萝北图标">
+        <a href="http://finance.china.com/news/11173316/20171006/31543817.html" target="open">石黑一雄：他笔下的故事如禅语，言有尽而意无穷</a><br>
+        <img src="1/bq1.jpg" alt="胡萝北图标">
+        <a href="https://www.baidu.com/s?wd=%E7%9F%B3%E9%BB%91%E4%B8%80%E9%9B%84&pn=0&tn=baidurt&ie=utf-8&rtt=1&bsst=1" target="open">... ...</a>
+    </div>
+    <div id="id8">
+        <img src="1/dlmg7.jpg" alt="别让我走剧照" width="600px" height="350px">
+    </div>
+    <div id="id6">
+        <img src="1/shyx5.jpg" alt="石黑一雄" width="300px">
+        <img src="1/shyx5.jpg" alt="石黑一雄" width="300px">
+        <img src="1/shyx5.jpg" alt="石黑一雄" width="300px">
+        <img src="1/shyx5.jpg" alt="石黑一雄" width="300px">
+        <hr style="height:10px;border:none;border-top:10px groove #D1C0FF;" />
+    </div>
+    <div id="id9">
+        <img src="1/me.jpg" alt="小兔咂头像" width="50px">161710305
+    </div>
+</body>
+</html>
