--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <hr style="height:10px;border:none;border-top:10px groove pink;" />
         <audio src="imag/ヘクとパスカル - fish in the pool ・花屋敷.mp3" controls></audio>
         <p>超级喜欢你！</p>
-        <img src="imag/xifan1.jpeg" alt="喜欢">
+        <img src="imag/xifan1.jpg" alt="喜欢">
         <img src="imag/xifan2.jpg" alt="喜欢">   
     </div><hr>
     </body>
