--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
     <div id="id1">
         <h1 style="color:#383838">瞧瞧这位先生你发现了什么？！</h1>
         <hr style="height:10px;border:none;border-top:10px groove pink;" />
-        <audio src="imag/ヘクとパスカル - fish in the pool ・花屋敷.mp3" controls></audio>
+        <audio src="daisypaints.github.io/imag/ヘクとパスカル - fish in the pool ・花屋敷.mp3" controls></audio>
         <p>超级喜欢你！</p>
-        <img src="imag/xifan1.jpg" alt="喜欢">
-        <img src="imag/xifan2.jpg" alt="喜欢">   
+        <img src="daisypaints.github.io/imag/xifan1.jpg" alt="喜欢">
+        <img src="daisypaints.github.io/imag/xifan2.jpg" alt="喜欢">   
     </div><hr>
     </body>
 </html>
