--- a/index.html
+++ b/index.html
@@ -67,12 +67,10 @@
 </head>
 <body>
     <div id="id1">
-        <h1 style="color:#383838">瞧瞧这位先生你发现了什么？！</h1>
+        <h3 style="color:#383838">这位先生瞧瞧你发现了什么？！</h3>
         <hr style="height:10px;border:none;border-top:10px groove pink;" />
-        <audio src="daisypaints.github.io/imag/ヘクとパスカル - fish in the pool ・花屋敷.mp3" controls></audio>
-        <p>超级喜欢你！</p>
-        <img src="daisypaints.github.io/imag/xifan1.jpg" alt="喜欢">
-        <img src="daisypaints.github.io/imag/xifan2.jpg" alt="喜欢">   
+        <p>>.<悄悄表白</p>
+        <p>超级喜欢你！>.<</p>  
     </div><hr>
     </body>
 </html>
