--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>瞧瞧你发现了什么？</title>
+    <title>？</title>
     <style type="text/css">
      *{
          background-color: mistyrose;
@@ -67,10 +67,10 @@
 </head>
 <body>
     <div id="id1">
-        <h3 style="color:#383838">这位先生瞧瞧你发现了什么？！</h3>
+        <h3 style="color:#383838"></h3>
         <hr style="height:10px;border:none;border-top:10px groove pink;" />
-        <p>>.<悄悄表白</p>
-        <p>超级喜欢你！>.<</p>  
+        <p></p>
+        <p></p>  
     </div><hr>
     </body>
 </html>
